ubuntu-release-upgrader (1:19.04.1) UNRELEASED; urgency=medium

  * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
    DistUpgrade/window_main.ui,
    data/gtkbuilder/DistUpgrade.ui,
    data/DistUpgrade.cfg,
    pre-build.sh:
    - updated for 18.10 -> 19.04
  * DistUpgrade/DistUpgradeController.py: check the python3 symlink and
    version instead of the python one. (LP: #1799839)
  * do-release-upgrade: Do not block release upgrades if the installable
    updates are ones which are not fully phased. (LP: #1799710)

 -- Brian Murray <brian@ubuntu.com>  Tue, 30 Oct 2018 16:22:20 -0700

ubuntu-release-upgrader (1:18.10.11) cosmic; urgency=medium

  * do-release-upgrade: do not run the release upgrade if either not all
    updates are installed or a reboot is required due to a libc6 upgrade.
    (LP: #1797209)
  * debian/control: change ubuntu-release-upgrader-core to depend on
    ca-certificates (LP: #1796940)
  * Update of demotions and mirrors data.

 -- Brian Murray <brian@ubuntu.com>  Wed, 10 Oct 2018 14:10:29 -0700

ubuntu-release-upgrader (1:18.10.10) cosmic; urgency=medium

  [ Harald Sitter ]
  * DistUpgradeViewKDE.py:
    - exitMainLoop is now exitMainLoopMidFlight to make it clearer that
      it is run while the app is still running. it's a hack and not
      the actual exit point
    - inhibit kscreenlocker while the UI is up to prevent the lock screen
      from breaking during upgrades and then complain to the user

  [ Brian Murray ]
  * DistUpgradeQuirks.py: add a quirk which checks for an apt architecture
    of i386 and prevents the upgrade as the architecture may be dropped.
  * DistUpgradeController.py: If the attempt to only upgrade libc6 ends up
    creating an issue with apt's problem resolver try the full upgrade. This
    is what would have happened before the fix for bug 1766890. (LP: #1787649)

 -- Brian Murray <brian@ubuntu.com>  Fri, 31 Aug 2018 15:36:32 -0700

ubuntu-release-upgrader (1:18.10.9) cosmic; urgency=medium
