@@ -6,8 +6,9 @@ ubuntu-release-upgrader (1:19.04.1) UNRELEASED; urgency=medium
     data/DistUpgrade.cfg,
     pre-build.sh:
     - updated for 18.10 -> 19.04
-  * DistUpgrade/DistUpgradeController.py: check the python3 symlink and
-    version instead of the python one. (LP: #1799839)
+  * DistUpgrade/DistUpgradeController.py: check all the python symlinks and
+    versions instead of the python one. Thanks to juliank for the assistance.
+    (LP: #1799839)
   * do-release-upgrade: Do not block release upgrades if the installable
     updates are ones which are not fully phased. (LP: #1799710)
 
